downgrade to jdk 15 for appveyor compatibility